# browser.wit

./: README.md
examples/: README.md  imports.js  index.html  poll.js  rust-component.wasm
examples/basic/: Cargo.toml  index.html
examples/basic/src/: lib.rs
examples/python-web-component/: app.py
examples/python-web-component/browser/: __init__.py
examples/python-web-component/browser/imports/: global_.py  poll.py
examples/python-web-component/static/: app.d.ts
examples/python-web-component/static/interfaces/: exports.d.ts  wasi-cli-environment.d.ts  wasi-clocks-monotonic-clock.d.ts  wasi-clocks-wall-clock.d.ts  wasi-filesystem-types.d.ts  wasi-io-poll.d.ts  wasi-io-streams.d.ts  wasi-random-insecure-seed.d.ts  wasi-random-insecure.d.ts  wasi-random-random.d.ts  wasi-sockets-instance-network.d.ts  wasi-sockets-ip-name-lookup.d.ts  wasi-sockets-network.d.ts  wasi-sockets-tcp-create-socket.d.ts  wasi-sockets-tcp.d.ts  wasi-sockets-udp-create-socket.d.ts  wasi-sockets-udp.d.ts  web-browser-global.d.ts
examples/rust-basic/: Cargo.toml
examples/rust-basic/src/: lib.rs
examples/rust-web-component/: Cargo.toml
examples/rust-web-component/src/: lib.rs
examples/rust-web-component/static/: basic-component.core.wasm  basic-component.d.ts  basic-component.js
examples/rust_counter/: .gitignore  Cargo.toml
examples/rust_counter/src/: lib.rs
generate/: Cargo.toml
generate/src/: main.rs
webidl/: Document.webidl  Element.webidl  HTMLElement.webidl  Node.webidl
wit/: deps.toml  web.wit  world.wit
(+2 files in other folders)
