[package]
name = "generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webidl2wit = { git = "https://github.com/wasi-gfx/webidl2wit.git", rev = "5050df7d3df7415b5628dae44a3cd36fb9efb06f" }
weedle = "0.13.0"
